{
    "name": "MainAction",
    "maps": [
        {
            "name": "Player",
            "id": "51496cd3-44aa-4ea8-a863-077821bf574e",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "2c43c1ad-445e-4c14-900c-c8985862ac35",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "9e8b2ab1-5d29-4a1f-beaa-9c696a4af42f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeLineUp",
                    "type": "Button",
                    "id": "4fe2a273-ab41-402b-b650-0d113ed2b21e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeLineDown",
                    "type": "Button",
                    "id": "fd5f449c-ecdb-4d15-ac47-05300d0a0f75",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "12f36893-ff90-4d5c-a263-7ad056f392d8",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "bc17471d-4764-4acb-8f4e-f73ac8438d39",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "253ab382-2b24-443b-842e-98971c9d733f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "5ce2d107-8147-4e87-a869-f8e3219dee6b",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5154d044-27bc-4e81-bdee-f64138894c13",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeLineUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "84286579-e8c2-4ace-949b-9fb7a9fc4d72",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeLineDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}